@@ -22,6 +22,7 @@ Version 2.13
   on Windows using the HWLOC_ENABLE_PLUGINS CMake option,
   thanks to Julian Hornich.
   + HWLOC_BUILD_SHARED_LIBS is removed in favor of BUILD_SHARED_LIBS.
+* Drop support for Windows before 7 or Server 2008 R2.
 
 
 Version 2.12.2
